# NeuroDriver

./: .gitignore  README.md  pyproject.toml
configs/: bc.yaml
cpp/: CMakeLists.txt  setup.sh
cpp/src/: main.cpp
neurodriver/data/: dataset.py  nuscenes_dataset.py  reward.py  sequence_dataset.py  transforms.py
neurodriver/evaluation/: eval_bc.py  eval_rl_vs_bc.py
neurodriver/models/: backbone.py  bev_model.py  e2e_model.py  world_model.py
neurodriver/training/: train_bc.py  train_bev.py  train_bev_nuscenes.py  train_rl.py  train_rl_finetune.py  train_world_model.py
neurodriver/utils/: device.py
scripts/: debug_bev.py  download_real_data.py  export_model.py  reextract_data.py  visualize_bc.py  visualize_bev.py
